Redesign the page for exploded-view

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<header class="top-banner sk-component sk-component--site-header xlt-header" role="banner"
 		style="padding-right: 236px; padding-left: 236px;">
 		<div class="primary-logo sk-logo">
-			<a href="https://www.stokke.com/EUR/en-sk/home" title="Stokke Home">
+			<a href="" title="Stokke Home">
 				<img src="./styles/logo-stokke.svg" alt="Stokke" class="sk-logo__image">
 			</a>
 		</div>
@@ -128,43 +128,43 @@
 			<ul class="menu-category level-1 sk-menu-header__items">
 				<li class="sk-menu-header__item has-sub-menu sk-menu-header__dropdown"
 					style="display: block; width: auto;">
-					<a class="link xlt-firstLevelCategory" href="https://www.stokke.com/EUR/en-sk/pram-1">
+					<a class="link xlt-firstLevelCategory" href="">
 						Prams
 					</a>
 				</li>
 				<li class="sk-menu-header__item has-sub-menu sk-menu-header__dropdown"
 					style="display: block; width: auto;">
-					<a class="link xlt-firstLevelCategory" href="https://www.stokke.com/EUR/en-sk/highchairs-1">
+					<a class="link xlt-firstLevelCategory" href="">
 						High Chairs
 					</a>
 				</li>
 				<li class="sk-menu-header__item has-sub-menu sk-menu-header__dropdown"
 					style="display: block; width: auto;">
 					<a class="link xlt-firstLevelCategory"
-						href="https://www.stokke.com/EUR/en-sk/carriers-and-car-seats-1">
+						href="">
 						Carriers &amp; Car Seats
 					</a>
 				</li>
 				<li class="sk-menu-header__item has-sub-menu sk-menu-header__dropdown"
 					style="display: block; width: auto;">
-					<a class="link xlt-firstLevelCategory" href="https://www.stokke.com/EUR/en-sk/nursery-1">
+					<a class="link xlt-firstLevelCategory" href="">
 						Nursery
 					</a>
 				</li>
 				<li class="sk-menu-header__item has-sub-menu sk-menu-header__dropdown"
 					style="display: block; width: auto;">
-					<a class="link xlt-firstLevelCategory" href="https://www.stokke.com/EUR/en-sk/travel-1">
+					<a class="link xlt-firstLevelCategory" href="">
 						Travel
 					</a>
 				</li>
 				<li class="sk-menu-header__item has-sub-menu sk-menu-header__dropdown"
 					style="display: block; width: auto;">
-					<a class="link xlt-firstLevelCategory" href="https://www.stokke.com/EUR/en-sk/bath-1">
+					<a class="link xlt-firstLevelCategory" href="">
 						Bath
 					</a>
 				</li>
 				<li class="sk-menu-header__item sk-menu-header__item-last" style="display: none; width: auto;"><a
-						href="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp/1001.html#"
+						href=""
 						class="link"><span></span><span></span><span></span></a>
 					<ul class="sk-menu-header__subitems"></ul>
 				</li>
@@ -175,7 +175,7 @@
 		<ul class="menu-utility-user sk-header-cta initialized">
 			<li class="stores sk-header-cta__icon sk-header-cta__icon--store-locator" data-target="store-locator">
 				<a class="link sk-find-store sk-header-find-store"
-					href="https://www.stokke.com/on/demandware.store/Sites-EUR-Site/en_SK/Stores-Find"
+					href=""
 					title="Locate Stores">
 					<!--?xml version="1.0" encoding="UTF-8"?--> <svg width="12px" height="16px" viewBox="0 0 12 16"
 						version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -200,7 +200,7 @@
 
 			<div class="sk-search-desktop">
 				<li class="header-search sk-header-cta__icon sk-header-cta__icon--search" data-target="search">
-					<a href="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp/1001.html#" class="link"
+					<a href="" class="link"
 						title="Search">
 						<!--?xml version="1.0" encoding="UTF-8"?--> <svg width="16px" height="15px" viewBox="0 0 16 15"
 							version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -323,11 +323,11 @@
 					<ul class="sk-breadcrumbs ps ps--theme_default initialized"
 						data-ps-id="1bee6e57-7432-1512-22a3-4b2e8e37d9c9">
 						<li>
-							<a class="breadcrumb-element" href="https://www.stokke.com/EUR/en-sk/highchairs-1"
+							<a class="breadcrumb-element" href=""
 								title="Go to High Chairs">High Chairs</a>
 						</li>
 						<li>
-							<a class="breadcrumb-element" href="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp"
+							<a class="breadcrumb-element" href=""
 								title="Go to Tripp Trapp®">Tripp Trapp®</a>
 						</li>
 						<li>
@@ -361,195 +361,20 @@
 
 					</h1>
 					<div id="product-content" class="sk-component--product-details__container xlt-pdpContent">
-						<div class="sk-image-gallery sk-image-gallery--loaded initialized">
+						<div class="sk-image-gallery sk-image-gallery--loaded initialized" style="flex: 0 0 100%">
 							<!--VIEWER GOES HERE-->
 							<vctr-viewer id="d9546c47-cc37-43c7-a335-b69ea054de90" model="d9546c47-cc37-43c7-a335-b69ea054de90" env="studio2" enableApi="1"></vctr-viewer>
 						</div>
-
-
-						<div class="sk-product-details">
-							<div class="sk-product-details__part sk-product-details__title">
-								<h3>
-									The Chair That Grows With The Child™ – A Chair For Life
-								</h3>
+					</div>
+					<div class="sk-product-details">
+						<div class="sk-product-details__part sk-product-details__cta" style="padding-left:50%">
+							<div id="go-to-configurator" class="sk-product-details__part sk-product-details__cta direct-buy">
+								<button type="submit" title="Add to Cart" value="Add to Cart"
+									class="sk-button add-to-cart sk-button--invert button-close xlt-addToCart">
+									Explode
+								</button>
 							</div>
-							<span class="visually-hidden"
-								itemprop="url">https://www.stokke.com/EUR/en-sk/100101.html</span>
-
-
-							<div class="sk-product-details__part sk-product-details__features ">
-								<div class="sk-copy">
-
-									<ul>
-										<li>Brings your baby to the dining table and closer to the family</li>
-										<li>Baby set and cushion accessories provide comfort for your baby</li>
-										<li>Highly adjustable seat and footplate positions</li>
-										<li>Available in a variety of colours for your baby boy or girl</li>
-										<li>Classic Scandinavian design by Peter Opsvik</li>
-									</ul>
-									<p><br><b>Personalise your Tripp Trapp with complimentary engraving.</b></p>
-								</div>
-							</div>
-							<div class="product-variations xlt-pdpVariations"
-								data-attributes="{&quot;color&quot;:{&quot;displayName&quot;:&quot;Colour&quot;,&quot;value&quot;:&quot;100&quot;,&quot;displayValue&quot;:&quot;Natural&quot;}}">
-								<h2 class="visually-hidden">Variations</h2>
-								<div class="sk-product-details__part sk-product-details__colours">
-
-
-									<div class="sk-product-details__colour-section">
-
-										<h5>
-											Wood Type:
-											Beech
-										</h5>
-
-										<div class="sk-colour-list initialized">
-
-											<div class="sk-colour-list__colour"
-												data-url="https://www.stokke.com/on/demandware.store/Sites-EUR-Site/en_SK/Product-Variation?pid=100102"
-												data-pdp-url="https://www.stokke.com/EUR/en-sk/100102.html">
-												<input id="checkbox--ca6bd2ca10d32b7e5beb3b2bf2--1001"
-													class="sk-colour-list__colour__input" type="radio" name="wood type"
-													checked="checked">
-												<label
-													class="sk-colour-list__colour__shape sk-colour-list__colour__shape--light"
-													for="checkbox--ca6bd2ca10d32b7e5beb3b2bf2--1001"
-													style="background-image: url(&#39;https://www.stokke.com/on/demandware.static/-/Sites-stokke-master-catalog/default/dw9b9b24b8/images/swatch/Wood-Natural-web-swatch-50x50px_27048.jpg&#39;);"></label>
-												<div class="sk-tooltip sk-tooltip--colour initialized">
-
-													Beech
-												</div>
-											</div>
-
-										</div>
-										<div class="sk-colour-list__expand" style="display: none;">
-											<a href="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp/1001.html">
-												+
-											</a>
-										</div>
-									</div>
-									<div class="sk-product-details__colour-section">
-
-										<h5>
-											Colour:
-											Natural
-										</h5>
-
-										<div class="sk-colour-list initialized">
-
-
-											<div class="sk-colour-list__colour"
-												data-url="https://www.stokke.com/on/demandware.store/Sites-EUR-Site/en_SK/Product-Variation?pid=1001&amp;dwvar_1001_color=101"
-												data-pdp-url="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp/1001.html?dwvar_1001_color=101"
-												data-variant-id="100102"
-												id="red">
-												<input id="checkbox--ca6bd2ca10d32b7e5beb3b2bf2--100101_101"
-													class="sk-colour-list__colour__input" value="101" type="radio"
-													name="100101_color" checked="">
-												<label
-													class="sk-colour-list__colour__shape sk-colour-list__colour__shape--light"
-													for="checkbox--ca6bd2ca10d32b7e5beb3b2bf2--100101_101"
-													style="background-image: url(&#39;/on/demandware.static/-/Sites-stokke-master-catalog/default/dw68d543f2/images/swatch/Wood-Red-web-swatch-50x50px_27049.jpg&#39;)"></label>
-												<div class="sk-tooltip sk-tooltip--colour initialized">
-													Red
-												</div>
-											</div>
-
-											<div class="sk-colour-list__colour"
-												data-url="https://www.stokke.com/on/demandware.store/Sites-EUR-Site/en_SK/Product-Variation?pid=1001&amp;dwvar_1001_color=104"
-												data-pdp-url="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp/1001.html?dwvar_1001_color=104"
-												data-variant-id="100103"
-												id="black">
-												<input id="checkbox--ca6bd2ca10d32b7e5beb3b2bf2--100101_104"
-													class="sk-colour-list__colour__input" value="104" type="radio"
-													name="100101_color">
-												<label
-													class="sk-colour-list__colour__shape sk-colour-list__colour__shape--light"
-													for="checkbox--ca6bd2ca10d32b7e5beb3b2bf2--100101_104"
-													style="background-image: url(&#39;/on/demandware.static/-/Sites-stokke-master-catalog/default/dwcf1c8431/images/swatch/Wood-Black-web-swatch-50x50px_20664.jpg&#39;)"></label>
-												<div class="sk-tooltip sk-tooltip--colour initialized">
-													Black
-												</div>
-											</div>
-											<div class="sk-colour-list__expand" style="display: none;">
-												<a
-													href="https://www.stokke.com/EUR/en-sk/highchairs/tripp-trapp/1001.html">
-													+
-												</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="product-review" data-pid="100101">
-								<div class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i
-										class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i><i
-										class="fa fa-star-o"></i></div>
-							</div>
-							<div class="sk-product-details__part sk-product-details__price xlt-pdpPrice">
-								<h6>
-									<span class="sk-product-details__price--discount">199,00 €</span>
-									<span class="value">
-										<div class="availability-msg">
-											<p
-												class="sk-product-list-tile__stock sk-product-stock sk-product-stock--in">
-												in stock</p>
-										</div>
-									</span>
-								</h6>
-								<small>(All prices are tax inclusive)</small>
-							</div>
-							<div class="sk-product-details__part sk-product-details__cta">
-								<div id="product-set-list" class="product-set-list">
-									<h2 class="visually-hidden">Products</h2>
-								</div>
-								<form
-									action="https://www.stokke.com/on/demandware.store/Sites-EUR-Site/en_SK/Cart-AddProduct"
-									method="post" id="dwfrm_product_addtocart_d0bwmwliquvq" class="pdpForm"
-									novalidate="novalidate">
-									<div class="product-add-to-cart">
-										<h2 class="visually-hidden">Product Actions</h2>
-										<div class="inventory visually-hidden">
-											<div class="quantity">
-												<label for="Quantity">Qty</label>
-												<input type="text" class="input-text" name="Quantity" id="Quantity"
-													size="2" maxlength="3" value="1" data-available="8794">
-											</div>
-										</div>
-										<input type="hidden" name="uuid" id="uuid" value="">
-										<input type="hidden" name="cartAction" id="cartAction" value="update">
-										<input type="hidden" name="pid" id="pid" value="100101">
-										<div id="go-to-configurator"
-											class="sk-product-details__part sk-product-details__cta direct-buy">
-											<a href="https://www.stokke.com/EUR/en-sk/3dconfigurator?family=tripp-trapp#/start?childPids=100101"
-												title="Create and Buy" class="sk-button">Create and Buy</a>
-											<input type="hidden" name="buttonValAdded" class="buttonValAdded"
-												value="Added">
-											<button type="submit" title="Add to Cart" value="Add to Cart"
-												class="sk-button add-to-cart sk-button--invert button-close xlt-addToCart"
-												data-gtmproduct="{&quot;name&quot;:&quot;Tripp Trapp® Chair Natural&quot;,&quot;id&quot;:&quot;100101&quot;,&quot;price&quot;:&quot;199,00&quot;,&quot;currency&quot;:&quot;EUR&quot;,&quot;brand&quot;:&quot;Stokke&quot;,&quot;category&quot;:&quot;15134&quot;,&quot;variant&quot;:&quot;Natural&quot;,&quot;list&quot;:&quot;product detail&quot;,&quot;position&quot;:1}"
-												data-purchasable-limit="5">
-												Add to Cart
-											</button>
-											<input type="hidden" name="buttonValAdded" class="buttonValAdded"
-												value="Added">
-											<button type="submit" title="Add to Cart" value="Add to Cart"
-												class="sk-button add-to-cart button-close xlt-addToCart sticky-mobile"
-												data-gtmproduct="{&quot;name&quot;:&quot;Tripp Trapp® Chair Natural&quot;,&quot;id&quot;:&quot;100101&quot;,&quot;price&quot;:&quot;199,00&quot;,&quot;currency&quot;:&quot;EUR&quot;,&quot;brand&quot;:&quot;Stokke&quot;,&quot;category&quot;:&quot;15134&quot;,&quot;variant&quot;:&quot;Natural&quot;,&quot;list&quot;:&quot;product detail&quot;,&quot;position&quot;:1}"
-												data-purchasable-limit="5">
-												Add to Cart
-											</button>
-										</div>
-										<div class="form-caption desktop-inline">
-											Delivery time: 3-5 business days
-										</div>
-										<a class="lb-link shipping-link" target="blank"
-											href="https://www.stokke.com/EUR/en-sk/customer-service/shipping-exchanges/shipping-exchanges.html">Shipping
-											&amp; Returns</a>
-									</div><!--  end details block -->
-								</form>
-							</div>
-						</div>
+						</div><!--  end details block -->
 					</div>
 				</div>
 			</section>
