Add all keyframes of animation

--- a/index.html
+++ b/index.html
@@ -363,13 +363,14 @@
 					<div id="product-content" class="sk-component--product-details__container xlt-pdpContent">
 						<div class="sk-image-gallery sk-image-gallery--loaded initialized" style="flex: 0 0 100%">
 							<!--VIEWER GOES HERE-->
-							<vctr-viewer id="d9546c47-cc37-43c7-a335-b69ea054de90" model="d9546c47-cc37-43c7-a335-b69ea054de90" env="studio2" enableApi="1"></vctr-viewer>
+							<!-- <vctr-viewer id="d9546c47-cc37-43c7-a335-b69ea054de90" model="d9546c47-cc37-43c7-a335-b69ea054de90" env="studio2" enableApi="1"></vctr-viewer> -->
+							<vctr-viewer id="99b6715e-ba9c-49d6-9c7f-62afa53bf3a2" model="99b6715e-ba9c-49d6-9c7f-62afa53bf3a2" env="studio2" enableApi="1"></vctr-viewer>
 						</div>
 					</div>
 					<div class="sk-product-details">
 						<div class="sk-product-details__part sk-product-details__cta" style="padding-left:50%">
 							<div id="go-to-configurator" class="sk-product-details__part sk-product-details__cta direct-buy">
-								<button type="submit" title="Add to Cart" value="Add to Cart"
+								<button id="explodeButton" type="submit" title="Add to Cart" value="Add to Cart"
 									class="sk-button add-to-cart sk-button--invert button-close xlt-addToCart">
 									Explode
 								</button>
