--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 							<div id="go-to-configurator" class="sk-product-details__part sk-product-details__cta direct-buy">
 								<button id="explodeButton" type="submit" title="Add to Cart" value="Add to Cart"
 									class="sk-button add-to-cart sk-button--invert button-close xlt-addToCart">
-									Explode
+									Animate
 								</button>
 							</div>
 						</div><!--  end details block -->
