--- a/index.html
+++ b/index.html
@@ -367,13 +367,18 @@
 							<vctr-viewer id="99b6715e-ba9c-49d6-9c7f-62afa53bf3a2" model="99b6715e-ba9c-49d6-9c7f-62afa53bf3a2" env="studio2" enableApi="1"></vctr-viewer>
 						</div>
 					</div>
-					<div class="sk-product-details">
-						<div class="sk-product-details__part sk-product-details__cta" style="padding-left:50%">
+					<div class="sk-product-details" style="padding-left:40%">
+						<div class="sk-product-details__part sk-product-details__cta">
 							<div id="go-to-configurator" class="sk-product-details__part sk-product-details__cta direct-buy">
-								<button id="explodeButton" type="submit" title="Add to Cart" value="Add to Cart"
+								<button id="constructButton" type="submit" title="Add to Cart" value="Add to Cart"
+									class="sk-button add-to-cart sk-button--invert button-close xlt-addToCart">
+									Construct
+								</button>
+								<button id="animateButton" type="submit" title="Add to Cart" value="Add to Cart"
 									class="sk-button add-to-cart sk-button--invert button-close xlt-addToCart">
 									Animate
 								</button>
+				
 							</div>
 						</div><!--  end details block -->
 					</div>
